--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ device_query = "2.0.0"
 eframe = "0.27"
 egui_extras = "0.27"
 egui_plot = "0.27"
+hashbrown = { version = "0.14.3", features = [ "serde" ] }
 humantime = "2.1"
 png = "0.17"
 serde = { version = "1.0", features = [ "derive" ] }
