--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "time_back"
-version = "1.1.0"
+version = "1.2.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -9,11 +9,11 @@ edition = "2021"
 active-win-pos-rs = "0.8"
 chrono = "0.4"
 confy = "0.6"
+dashmap = { version = "5.5.3", features = [ "serde" ] }
 device_query = "2.0.0"
 eframe = "0.27"
 egui_extras = "0.27"
 egui_plot = "0.27"
-hashbrown = { version = "0.14.3", features = [ "serde" ] }
 humantime = "2.1"
 png = "0.17"
 serde = { version = "1.0", features = [ "derive" ] }
