--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,16 +6,17 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-active-win-pos-rs = "0.8"
-chrono = "0.4"
-confy = "0.6"
-dashmap = { version = "5.5.3", features = [ "serde" ] }
-device_query = "2.0.0"
-eframe = "0.27"
-egui_extras = "0.27"
-egui_plot = "0.27"
-humantime = "2.1"
-png = "0.17"
-serde = { version = "1.0", features = [ "derive" ] }
-serde_json = "1.0"
-tinyfiledialogs = "3.9"
+active-win-pos-rs = "^0.9"
+chrono = "^0.4"
+confy = "^1"
+dashmap = { version = "^6", features = [ "serde" ] }
+device_query = "^4"
+eframe = "0.31"
+egui-file-dialog = "0.10.0"
+egui_extras = "0.31"
+egui_plot = "0.31"
+humantime = "^2"
+png = "^0.17"
+serde = { version = "1", features = [ "derive", "rc" ] }
+serde_json = "1"
+
